<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controlador.Registro">


    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="208dp"
        android:layout_marginTop="64dp"
        android:text="@string/registro"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="64dp"
        android:text="@string/CAE"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnuserR"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="32dp"
        android:text="@string/agregarusuario"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />


    <Button
        android:id="@+id/btninstructorR"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="32dp"
        android:text="@string/agregarInstructor"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnuserR" />


    <Button
        android:id="@+id/btnjornadaR"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="32dp"
        android:text="@string/agregarJornada"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btninstructorR" />

    <Button
        android:id="@+id/btnprogramaR"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="32dp"
        android:text="@string/agregarprograma"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnjornadaR" />

    <Button
        android:id="@+id/btnhorarioR"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="32dp"
        android:text="@string/agregarhorario"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnprogramaR" />

    <Button
        android:id="@+id/btnuserR2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="128dp"
        android:layout_marginTop="32dp"
        android:text="@string/CAEuser"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <Button
        android:id="@+id/btninstructorR2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="128dp"
        android:layout_marginTop="32dp"
        android:text="@string/caeInstructor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnuserR2" />

    <Button
        android:id="@+id/btnjornadaR2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="128dp"
        android:layout_marginTop="32dp"
        android:text="@string/caeJornada"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btninstructorR2" />

    <Button
        android:id="@+id/btnprogramaR2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="128dp"
        android:layout_marginTop="32dp"
        android:text="@string/caeprograma"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnjornadaR2" />

    <Button
        android:id="@+id/btnhorarioR2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="128dp"
        android:layout_marginTop="32dp"
        android:text="@string/caehorario"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnprogramaR2" />

</android.support.constraint.ConstraintLayout>