<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Controlador.MainActivity"
    tools:layout_editor_absoluteY="25dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="217dp"
        android:layout_height="39dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="16dp"
        android:text="@string/ctpi"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/hola"
        android:layout_width="218dp"
        android:layout_height="196dp"
        android:layout_marginEnd="320dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/boton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hola2"
        android:layout_width="217dp"
        android:layout_height="197dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="224dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/cuadrai"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hola3"
        android:layout_width="208dp"
        android:layout_height="204dp"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="332dp"
        android:background="@drawable/especi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="166dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/centrotele"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnloginA"
        android:layout_width="120dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="392dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnlogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="89dp"
        android:layout_height="50dp"
        android:layout_marginBottom="76dp"
        android:src="@drawable/sena"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="208dp"
        android:text="@string/area"
        android:textColor="#F99106"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="188dp"
        android:layout_marginStart="36dp"
        android:text="@string/indCrea"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="324dp"
        android:layout_marginTop="8dp"
        android:text="@string/ambiente"
        android:textColor="#6C6C6C"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="363dp"
        android:layout_height="179dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="324dp"
        android:layout_marginTop="8dp"
        android:text="@string/indCrea"
        android:textColor="#007B76"
        android:textSize="70dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/numero"
        android:textColor="#007B76"
        android:textSize="200dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginTop="84dp"
        android:text="@string/jornadaM"
        android:textSize="30dp"
        android:textColor="#74A242"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="196dp"
        android:layout_marginTop="124dp"
        android:text="@string/horarioM"
        android:textColor="#74A242"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="228dp"
        android:layout_marginTop="152dp"
        android:text="@string/Programa"
        android:textColor="#6A6866"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="128dp"
        android:layout_marginTop="180dp"
        android:text="@string/Pro1"
        android:textSize="30dp"
        android:textColor="#6E6C6A"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/jornadaT"
        android:textColor="#F99106"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="96dp"
        android:textColor="#F99106"
        android:text="@string/HorarioT"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="136dp"
        android:text="@string/Programa"
        android:textColor="#6A6866"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="296dp"
        android:layout_marginEnd="44dp"
        android:text="@string/pro2"
        android:textSize="30dp"
        android:textColor="#6E6C6A"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="204dp"
        android:layout_marginEnd="112dp"
        android:text="@string/jornadaN"
        android:textColor="#147667"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:layout_marginEnd="184dp"
        android:text="@string/HorarioN"
        android:textSize="20dp"
        android:textColor="#147667"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginBottom="148dp"
        android:layout_marginEnd="228dp"
        android:text="@string/Programa"
        android:textColor="#6A6866"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="92dp"
        android:text="@string/pro3"
        android:textSize="30dp"
        android:textColor="#6E6C6A"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtHora"
        android:layout_width="309dp"
        android:layout_height="92dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="40dp"
        android:textSize="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"
        android:layout_marginTop="96dp"
        android:textSize="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnregistroA"
        android:layout_width="120dp"
        android:layout_height="64dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnloginA" />


</android.support.constraint.ConstraintLayout>