<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controlador.CPrograma">
    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spinnerCP"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:ms_arrowColor="@color/colorPrimaryDark"
        app:ms_floatingLabelText="@string/seleccionePrograma"
        app:ms_hint="@string/seleccionePrograma"
        app:ms_arrowSize="20sp"
        app:ms_baseColor="@color/colorPrimaryDark"
        app:ms_floatingLabelColor="@color/colorPrimaryDark"
        app:ms_highlightColor="@color/colorAccent"
        app:ms_hintColor="@color/colorPrimaryDark" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCP">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtdesCP"
            android:layout_width="1284dp"
            android:layout_height="wrap_content"
            android:hint="@string/ingresedescripcion"
            android:inputType="textMultiLine" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout15">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtvidCP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresevideo" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout16">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txticoCP"
            android:hint="@string/ingreseicono" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnactualizarP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="500dp"
        android:layout_marginTop="68dp"
        android:text="@string/actualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout17" />

    <Button
        android:id="@+id/btneliminarP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="500dp"
        android:layout_marginTop="68dp"
        android:text="@string/eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout17" />


</android.support.constraint.ConstraintLayout>