<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controlador.CJornada"
    tools:layout_editor_absoluteY="89dp">

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spinnerNCJ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:ms_hint="@string/seleccioneJornada"
        app:ms_floatingLabelText="@string/seleccioneJornada"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:ms_arrowColor="@color/colorPrimaryDark"
        app:ms_arrowSize="20sp"
        app:ms_baseColor="@color/colorPrimaryDark"
        app:ms_floatingLabelColor="@color/colorPrimaryDark"
        app:ms_highlightColor="@color/colorAccent"
        app:ms_hintColor="@color/colorPrimaryDark" />

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spinnerHCJ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:ms_floatingLabelText="@string/seleccioneHorario"
        app:ms_hint="@string/seleccioneHorario"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerNCJ"
        app:ms_arrowColor="@color/colorPrimaryDark"
        app:ms_arrowSize="20sp"
        app:ms_baseColor="@color/colorPrimaryDark"
        app:ms_floatingLabelColor="@color/colorPrimaryDark"
        app:ms_highlightColor="@color/colorAccent"
        app:ms_hintColor="@color/colorPrimaryDark" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerHCJ">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txticoCJ"
            android:hint="@string/urlIcono" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnactualizarCJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="500dp"
        android:layout_marginTop="64dp"
        android:text="@string/actualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout19" />

    <Button
        android:id="@+id/btneliminarCJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="500dp"
        android:layout_marginTop="64dp"
        android:text="@string/eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout19" />


</android.support.constraint.ConstraintLayout>